--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,6 +3,6 @@
     <string name="hello">Hello World, LockScreenAppActivity!</string>
     <string name="app_name">LockScreenApp</string>
     <string name="unloack">Unlock</string>
-    <color name="mycolor1">#F5DC49</color>
+    <color name="black">#000000</color>
     <string name="action_settings">Settings</string>
 </resources>
