--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="hello">Hello World, LockScreenAppActivity!</string>
-    <string name="app_name">LockScreenApp</string>
+    <string name="app_name">Foci</string>
     <string name="unloack">Unlock</string>
+    <string name="pref_switch_lockscreen_overlay_title">Lockscreen</string>
+    <string name="pref_switch_lockscreen_show_clock">Show Clock</string>
+    <string name="pref_sleep_time">Locking Time</string>
     <color name="black">#000000</color>
     <string name="action_settings">Settings</string>
 </resources>
